fixing extra directory issue

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-DATABASE_URL=your-database-connection-string
+MONGODB_URI=mongodb+srv://podcastedcadmin:HfXWL9HlGUkN8q3X@podcastedc.fp7gh.mongodb.net/?retryWrites=true&w=majority&appName=PodcastEDC
